[package]
name = "munin-node-access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1"
openssh = "0.9.1"
handlebars = "3"
tokio = { version = "1.17", features = [ "process", "io-util", "macros" ] }
